--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "imagekit": "^6.0.0",
     "jose": "^6.0.11",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "qrcode": "^1.5.4",
